# HUniversal-Production-Utrecht

./: .classpath  .export-rospath  .gitignore  .gitignore~  .gitmodules  .project  .reviewboardrc  APDescription.txt  CMakeLists.txt  Jade configuration.launch  Launch ACLMessagesAnalyzer.launch  Launch Project.launch  MTPs-GridAgents.txt  MTPs-Main-Container.txt  Mysql Cluster install  README.md  REXOS.project  Simulation.xml  SixAxisCalculations.cpp  SixAxisCalculations.h  Start dummy.launch  VISIONdevelopment.mk  VISIONdevelopment.project  VISIONdevelopment.workspace  VISIONdevelopment_wsp.mk  autumn_path  banaan.txt  build-new.xml  build.xml  camera.launch  essentials.launch  fullReset.sh  grid (1).launch  grid.launch  gridLog.txt  launch ROS with gazebo.sh  launch-gateway-webserver.sh  log ( agent-identifier name EQ1@145.89.253.351099JADE  addresses (sequence httpalex-laptop7778acc )).json  log ( agent-identifier name EQ1@145.89.77.2071099JADE  addresses (sequence httpalex-laptop7778acc )).json  log ( agent-identifier name EQ1@192.168.86.1281099JADE  addresses (sequence httpubuntu7778acc )).json  (+10 more)
libraries/blackboardCppClient/: CMakeLists.txt
libraries/blackboardCppClient/include/blackboardCppClient/: BlackboardCppClient.h  BlackboardSubscriber.h
libraries/blackboardCppClient/src/: BlackboardCppClient.cpp
libraries/deltaRobot/: CMakeLists.txt
libraries/deltaRobot/include/DeltaRobot/: DeltaRobot.h  EffectorBoundaries.h  (+9 more)
libraries/deltaRobot/src/: DeltaRobot.cpp  EffectorBoundaries.cpp  InverseKinematics.cpp  deltarobot.cpp  effector_boundaries.cpp
libraries/inputOutput/: CMakeLists.txt
libraries/inputOutput/src/: Gripper.cpp  InputOutputController.cpp  OutputDevice.cpp
libraries/modbusController/: CMakeLists.txt
libraries/modbusController/src/: ModbusController.cpp
libraries/motor/: CMakeLists.txt
libraries/motor/src/: MotorManager.cpp  StepperMotor.cpp  steppermotor3.cpp
libraries/utilities/: CMakeLists.txt
libraries/utilities/src/: HighResolutionStopwatch.cpp  Utilities.cpp  Utils.cpp
libraries/utilities/xml_io/: readme.txt
libraries/virtualModbusController/: CMakeLists.txt
libraries/virtualModbusController/src/: ModbusController.cpp
libraries/vision/: CMakeLists.txt
libraries/vision/src/: CrateTracker.cpp  FiducialDetector.cpp  PixelAndRealCoordinateTransformer.cpp  PixelToRealCoordinateTransformer.cpp  QRCodeDetector.cpp
ros/crateLocatorNode/: CMakeLists.txt  manifest.xml
ros/crateLocatorNode/src/: CrateLocatorNode.cpp  GridCrate4x4MiniBall.cpp  crateLocatorNode.cpp
ros/crateLocatorNode/srv/: getCrate.srv
ros/deltaRobotNode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
ros/deltaRobotNode/msg/: Motion.msg
ros/deltaRobotNode/src/: DeltaRobotNode.cpp
ros/deltaRobotNode/srv/: Calibrate.srv  MovePath.srv  MoveToRelativePoint.srv
ros/equipletNode/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/equipletNode/msg/: registerNode.msg
ros/equipletNode/src/: EquipletNode.cpp  EquipletNodeTest.cpp  Main.cpp
ros/followNode/: CMakeLists.txt  manifest.xml
ros/followNode/src/: FollowNode.cpp
ros/gripperNode/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/gripperNode/src/: GripperNode.cpp  main.cpp
ros/lookupHandler/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/lookupHandler/msg/: LookupMessage.msg
ros/lookupHandler/src/: LookupHandler.cpp  lookupHandler.cpp
ros/lookupHandler/srv/: LookupServer.srv
ros/rosMast/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/rosMast/msg/: State.msg  StateChanged.msg
ros/rosMast/src/: Garbage.cpp  StateMachine.cpp
ros/rosMast/srv/: StateChange.srv
src/libraries/rexos_blackboard_cpp_client/: CMakeLists.txt  package.xml
src/libraries/rexos_datatypes/: CMakeLists.txt  package.xml
src/libraries/rexos_delta_robot/: CMakeLists.txt  package.xml
src/libraries/rexos_mast/: CMakeLists.txt  package.xml
src/libraries/rexos_modbus/: CMakeLists.txt  package.xml
tools/: CMakeLists.txt
tools/CMakeLists.txt_files/: cbgapi.loaded_0  code_review_scripts.js  d_sb.css  ph_core.js  plusone.js  source_file_scripts.js
tools/autoKeyStoreServer/: CMakeLists.txt  keyvalDB
tools/blackboardCppClientTest/: CMakeLists.txt  mainpage.dox  manifest.xml
tools/blackboardCppClientTest/src/: BlackboardCppClientTest.cpp
tools/deltaRobotTest/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
tools/deltaRobotTest/src/: DeltaRobotTest.cpp
tools/demos/dotMatrixPrinterNode/: manifest.xml
tools/demos/imageTransformationNode/: manifest.xml
tools/demos/pickAndPlaceNode/: CMakeLists.txt  manifest.xml
tools/dotMatrixPrinterNode/: CMakeLists.txt
tools/dotMatrixPrinterNode/src/: DotMatrixPrinterNode.cpp
tools/gripperTestNode/: CMakeLists.txt  mainpage.dox  manifest.xml
tools/gripperTestNode/include/: Gripper.h  GripperTestNode.h  Services.h
tools/gripperTestNode/src/: Gripper.cpp  GripperTestNode.cpp
tools/imageTransformationNode/: CMakeLists.txt
tools/imageTransformationNode/src/: ImageTransformationNode.cpp
tools/keyboardControlNode/: CMakeLists.txt  Makefile  mainpage.dox
tools/keyboardControlNode/src/: KeyBoardControlNode.cpp
tools/mcRegisterSave/src/: mcRegisterSave.cpp
tools/modbusConnectionTester/src/: modbusConnectionTester.cpp
tools/rosBlackboardReceiveNode/: CMakeLists.txt  manifest.xml
tools/rosBlackboardReceiveNode/src/: rosBlackboardReceiveNode.cpp
tools/rosBlackboardSendNode/: CMakeLists.txt  manifest.xml
tools/rosBlackboardSendNode/src/: RosBlackboardSendNode.cpp
tools/rosCommunicationBenchmark/: CMakeLists.txt  mainpage.dox  manifest.xml  parse_log.py
tools/rosCommunicationBenchmark/msg/: Ident.msg  Payload.msg
tools/rosCommunicationBenchmark/src/: RosComBenchmarkClient.cpp  RosComBenchmarkServer.cpp
tools/rosCommunicationBenchmark/srv/: TestServiceFilled.srv
tools/test/deltaRobotBenchmark/: CMakeLists.txt  manifest.xml
tools/test/visionDeltaRobotResponseTime/: CMakeLists.txt  manifest.xml  readme
tools/watchdogTester/: CMakeLists.txt  manifest.xml
tools/watchdogTester/src/: watchdogTester.cpp
(+3256 files in other folders)
