<?xml version="1.0"?>
<package>
  <name>rexos_datatypes</name>
  <version>0.0.0</version>
  <description>The rexos_datatypes package</description>
  <maintainer email="lowcostvision@gmail.com">Leau Caust</maintainer>
  <license>newBSD</license>
  <url type="website">https://github.com/AgileManufacturing/HUniversal-Production-Utrecht</url>
  <author email="dickvandersteen@gmail.com">Dickvdsteen</author>
  <author email="koenbraham@gmail.com">KBraham</author>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lrexos_datatypes"/>
  </export>
</package>